<resources>
    <string name="app_name">SAM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Feda Muyco</string>
    <string name="nav_header_subtitle">Parent</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_users">Users</string>
    <string name="menu_school_year">School Year</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_students">Students per Course</string>

    <string name="first_subj">Entrepreneurship</string>
    <string name="second_subj">Computer Programming 5</string>
    <string name="third_subj">Contemporary Arts</string>
    <string name="fourth_subj">Mobile Application 2</string>
    <string name="fifth_subj">Physical Education 4</string>
    <string name="sixth_subj">Empowerment Technology</string>

    <string name="present">Present</string>
    <string name="late">Late</string>
    <string name="absent">Absent</string>
    <string name="na">N/A</string>

    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="fullname">Fullname</string>
    <string name="usertype">Usertype</string>
    <string name="program">Program</string>
    <string name="year">Year</string>
    <string name="button">Login</string>

    <string name="change_pass">Change Password</string>
    <string name="changepass_description">We highly recommend you to change your password.</string>
    <string name="current_pass">Current Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm Password</string>

    <string name="register_sub_header">Register an account</string>
    <string name="register_button">Register account</string>
    <string name="cancel">Cancel</string>

    <string name="sam">SAM</string>
    <string name="dvo">DAVAO</string>
    <string name="stiam">STI Attendance Monitoring</string>
    <string name="footer">Exclusive App for STI College Davao Students</string>

    <string name="add">Add</string>
    <string name="add_user">Add User</string>
    <string name="add_course">Add Course</string>
    <string name="course_name">Name</string>
    <string name="course_description">Description</string>
    <string name="add_student">Add Student</string>
    
    <string-array name="user_type">
        <item>Parent</item>
        <item>Teacher</item>
        <item>Admin</item>
    </string-array>


</resources>
