<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="samdvo.com.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="samdvo.com.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_users"
        android:name="samdvo.com.ui.users.UsersFragment"
        android:label="@string/menu_users"
        tools:layout="@layout/fragment_users" />

    <fragment
        android:id="@+id/nav_school_year"
        android:name="samdvo.com.ui.schoolYear.SchoolYearFragment"
        android:label="@string/menu_school_year"
        tools:layout="@layout/fragment_school_year" />

    <fragment
        android:id="@+id/nav_courses"
        android:name="samdvo.com.ui.courses.CoursesFragment"
        android:label="@string/menu_courses"
        tools:layout="@layout/fragment_courses" />

    <fragment
        android:id="@+id/nav_students"
        android:name="samdvo.com.ui.students.StudentsFragment"
        android:label="@string/menu_students"
        tools:layout="@layout/fragment_students" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="samdvo.com.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

</navigation>