<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_user"
            android:letterSpacing="-0.02"
            android:textSize="30sp"
            android:fontFamily="@font/bold"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_sub_header"
            android:letterSpacing="-0.02"
            android:textSize="15sp"
            android:fontFamily="@font/regular"
            android:textColor="@color/grey"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>


    </LinearLayout>

    <EditText
        android:id="@+id/etFullname"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/grey"
        android:hint="@string/fullname"
        android:singleLine="true"
        android:background="@drawable/input_field2" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:background="@drawable/input_field2"
        android:hint="@string/user"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/grey" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:textColorHint="@color/grey"
        android:hint="@string/pass"
        android:singleLine="true"
        android:background="@drawable/input_field2" />

    <Spinner
        android:id="@+id/spinnerUserType"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="20dp" />


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/medium"
        android:text="@string/register_button"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/button_blue"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:fontFamily="@font/medium"
        android:text="@string/cancel"
        android:textSize="15sp"
        android:textColor="@color/yellow"
        android:textAllCaps="false"
        android:layout_marginBottom="20dp"/>

</LinearLayout>