<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="0.8"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fullname"
            android:id="@+id/tvFullName"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:id="@+id/tvUsername"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            android:id="@+id/tvPassword"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usertype"
            android:id="@+id/tvUserType"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="0.2"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:padding="5dp"
            android:layout_weight="0.5"
            app:srcCompat="@drawable/ic_edit" />

        <ImageView
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:padding="5dp"
            android:layout_weight="0.5"
            app:srcCompat="@drawable/ic_delete" />

    </LinearLayout>

</LinearLayout>