<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/heavy"
                android:text="@string/sam"
                android:letterSpacing="-0.07"
                android:textColor="@color/yellow"
                android:textSize="45sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/heavy"
                android:layout_marginTop="100dp"
                android:text="@string/dvo"
                android:letterSpacing="-0.07"
                android:textColor="@color/white"
                android:textSize="45sp"
                android:paddingLeft="10dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:fontFamily="@font/medium"
            android:layout_marginTop="-5dp"
            android:text="@string/stiam"
            android:textColor="@color/light_blue"
            android:textSize="15sp"/>

        <Button
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:id="@+id/btnLogin"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/medium"
            android:text="@string/button"
            android:letterSpacing="-0.02"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/button_yellow"
            android:textAllCaps="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/medium"
            android:gravity="bottom"
            android:padding="20dp"
            android:text="@string/footer"
            android:textColor="@color/light_blue"
            android:textSize="13sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
